# itn-ru

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/scripts/: check_cpp_parity.py
.github/workflows/: ci.yml
cpp/: CMakeLists.txt  README.md
cpp/cmake/: rus_itnConfig.cmake.in
cpp/include/rus_itn/: rus_itn.h
cpp/src/: rus_itn.cc
cpp/tests/: rus_itn_test.cc
cpp/tools/: rus_itn_main.cc
rus/: __init__.py  __main__.py  export.py  graph_utils.py  utils.py  wfst.py
rus/data/: measurements.tsv  month.tsv  suppletive.tsv  whitelist.tsv
rus/data/address/: apartment.tsv  building.tsv  house.tsv  street.tsv
rus/data/currency/: currency_major.tsv  currency_minor.tsv
rus/data/electronic/: providers.tsv  symbols.tsv  tlds.tsv
rus/data/numbers/: __init__.py  cardinals_billion.tsv  cardinals_million.tsv  cardinals_thousand.tsv  decimal_delimiter.tsv  decimal_endings.tsv  quantity.tsv
rus/data/numbers/cardinal/accusative/: cardinals_digit.tsv  cardinals_teen.tsv  cardinals_ties.tsv  cardinals_zero.tsv
rus/data/numbers/cardinal/dative/: cardinals_digit.tsv  cardinals_hundred.tsv  cardinals_zero.tsv
rus/data/numbers/cardinal/genitive/: cardinals_digit.tsv  cardinals_hundred.tsv  cardinals_teen.tsv  cardinals_ties.tsv  cardinals_zero.tsv
rus/data/numbers/cardinal/instrumental/: cardinals_digit.tsv  cardinals_hundred.tsv  cardinals_teen.tsv  cardinals_ties.tsv  cardinals_zero.tsv
rus/data/numbers/cardinal/nominative/: cardinals_digit.tsv  cardinals_hundred.tsv
rus/data/numbers/cardinal/prepositional/: cardinals_digit.tsv  cardinals_hundred.tsv  cardinals_zero.tsv
rus/data/numbers/fraction/: denominator_digit_pl.tsv  denominator_digit_sg.tsv  denominator_teen_pl.tsv  denominator_teen_sg.tsv  denominator_ties_pl.tsv  denominator_ties_sg.tsv
rus/data/numbers/ordinal/: ordinal_digit.tsv  ordinal_hundred.tsv  ordinal_teen.tsv  ordinal_thousand.tsv  ordinal_ties.tsv
rus/data/time/: hours.tsv  minutes.tsv  to_hour.tsv
rus/taggers/: address.py  cardinal.py  century.py  code.py  date.py  decade.py  decimal.py  duration.py  electronic.py  fraction.py  ip.py  legal.py  measure.py  money.py  number_sign.py  ordinal.py  range.py  score.py  telephone.py  time.py  tokenize_and_classify.py  version.py  whitelist.py  word.py
rus/verbalizers/: cardinal.py  date.py  decimal.py  electronic.py  fraction.py  measure.py  money.py  ordinal.py  telephone.py  time.py  verbalize.py  verbalize_final.py  whitelist.py  word.py
tests/: test_address.py  test_api.py  test_cardinal.py  test_century.py  test_code.py  test_date.py  test_decimal.py  test_duration.py  test_electronic.py  test_fraction.py  test_measure.py  test_money.py  test_number_sign.py  test_ordinal.py  test_punctuation.py  test_range.py  test_references.py  test_telephone.py  test_time.py  test_utils.py  test_whitelist.py  test_word.py
