[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rus_itn"
version = "0.1.9"
authors = [
    { name = "Yehor Smoliakov", email = "egorsmkv@gmail.com" },
]
description = "WFST for Russian Inverse Text Normalization (ITN) based on NVIDIA NeMo and Pynini"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
keywords = ["itn", "inverse-text-normalization", "russian", "wfst", "pynini", "openfst"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Natural Language :: Russian",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "pynini>=2.1.6",
]

[project.scripts]
rus-itn = "rus.__main__:main"

[project.urls]
"Homepage" = "https://github.com/ThirdLetterC/itn-ru"
"Bug Tracker" = "https://github.com/ThirdLetterC/itn-ru/issues"

[dependency-groups]
dev = [
    "pytest>=7.4.4",
    "ruff>=0.15.20",
]

[tool.setuptools.packages.find]
include = ["rus*"]
exclude = ["tests*", "cpp*"]

[tool.setuptools.package-data]
"rus" = ["data/**/*.tsv", "py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 160
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E741"]
